Update path for rv cpu subrepo

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "riscv-cpu"]
-	path = riscv-cpu
+[submodule "rtl/riscv-cpu"]
+	path = rtl/riscv-cpu
 	url = git@github.com:LiamSkirrow/riscv-cpu.git
